# alg-viz

./: .gitignore  Cargo.toml  README.org  index.html  index.js  makefile
src/: alg.rs  bibwt.rs  bwt.rs  canvas.rs  cli.rs  grid.rs  html.rs  interaction.rs  lib.rs  main.rs  sdl.rs  suffix_array.rs  viz.rs
src/alg/: bibwt.rs  bwt.rs  suffix_array.rs
