[package]
name = "suffix-array-construction"
authors = ["Ragnar Groot Koerkamp"]
description = "A visualization of the Ko-Aluru suffix array extension algorithm."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RagnarGrootKoerkamp/suffix-array-construction"
license = "MPL-2.0"
keywords = ["suffix-array"]
readme = "README.org"
categories = ["science"]
default-run = "suffix-array-construction"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "*"

clap = {version="3.*", optional=true, features=["derive", "wrap_help"]}
sdl2 = {version="*", optional=true, features=["ttf"]}
lazy_static = {version="*", optional=true}

wasm-bindgen = {version="*", optional=true}
web-sys = { version = "*", optional=true, features = [
"ImageData",
"CanvasRenderingContext2d",
"HtmlCanvasElement",
"console",
"BinaryType", "Blob", "ErrorEvent", "MessageEvent", "ProgressEvent", "WebSocket",
"Document", "Element", "HtmlElement", "Node", "Window", "HtmlInputElement",
"HtmlSelectElement",
]}

[features]
default = ["bin"]
bin = ["dep:clap", "dep:sdl2", "dep:lazy_static"]
wasm = ["dep:wasm-bindgen", "dep:web-sys"]
