[package]
name = "alg-viz"
authors = ["Ragnar Groot Koerkamp"]
description = "Visualizations of some string algorithms."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RagnarGrootKoerkamp/alg-viz"
license = "MPL-2.0"
keywords = ["string", "algorithm", "visualization"]
readme = "README.org"
categories = ["science"]
default-run = "alg-viz"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "*"

clap = {version="3.*", optional=true, features=["derive", "wrap_help"]}
sdl2 = {version="*", optional=true, features=["ttf"]}
lazy_static = {version="*", optional=true}

wasm-bindgen = {version="*", optional=true}
web-sys = { version = "*", optional=true, features = [
"ImageData",
"CanvasRenderingContext2d",
"HtmlCanvasElement",
"console",
"BinaryType", "Blob", "ErrorEvent", "MessageEvent", "ProgressEvent", "WebSocket",
"Document", "Element", "HtmlElement", "Node", "Window", "HtmlInputElement",
"HtmlSelectElement",
]}

[features]
default = ["bin"]
bin = ["dep:clap", "dep:sdl2", "dep:lazy_static"]
wasm = ["dep:wasm-bindgen", "dep:web-sys"]
